# cozo_dart

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: performance_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/models/: load_step.dart  preset_model.dart
example/lib/pages/: graph_page.dart
example/lib/services/: db_service.dart
example/lib/tabs/: compare_tab.dart  presets_tab.dart  query_tab.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: cozo_dart.podspec
lib/: cozo_dart.dart
lib/src/: cozo_database.dart  cozo_exception.dart  cozo_graph.dart  cozo_result.dart  cozo_text_search.dart  cozo_utils.dart  cozo_vector_search.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
macos/: cozo_dart.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
test/: cozo_dart_test.dart
windows/: CMakeLists.txt
(+3 files in other folders)
