[package]
name = "cozo_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
cozo = { version = "0.7", features = ["compact", "storage-sqlite"] }
serde_json = "1"
anyhow = "1"
rayon = "=1.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
